fix text wrapping

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,5 +1,5 @@
 $--screen-xs-min: 576px;
-$--screen-sm-min: 768px;
+$--screen-sm-min: 767px;
 $--screen-md-min: 992px;
 $--screen-lg-min: 1199px;
 
